--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,21 @@
   <url>http://maven.apache.org</url>
 
   <dependencies>
-    
+    <dependency>
+      <groupId>org.webjars</groupId>
+      <artifactId>jquery</artifactId>
+      <version>2.1.3</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apertereports</groupId>
+      <artifactId>backbone</artifactId>
+      <version>2.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.webjars</groupId>
+      <artifactId>underscorejs</artifactId>
+      <version>1.8.3</version>
+    </dependency>
   </dependencies>
 
   <build>
