--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
   <name>BackBone Maven Webapp</name>
   <url>http://maven.apache.org</url>
 
+
   <dependencies>
     <dependency>
       <groupId>org.webjars</groupId>
@@ -15,15 +16,28 @@
       <version>2.1.3</version>
     </dependency>
     <dependency>
-      <groupId>org.apertereports</groupId>
-      <artifactId>backbone</artifactId>
-      <version>2.2</version>
+      <groupId>org.webjars</groupId>
+      <artifactId>backbonejs</artifactId>
+      <version>1.2.1</version>
     </dependency>
     <dependency>
       <groupId>org.webjars</groupId>
       <artifactId>underscorejs</artifactId>
       <version>1.8.3</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.webjars</groupId>
+      <artifactId>bootstrap</artifactId>
+      <version>3.3.4</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-web</artifactId>
+      <version>4.1.6.RELEASE</version>
+    </dependency>
+
   </dependencies>
 
   <build>
